@@ -3,7 +3,7 @@ Varnish Purge
 Version: 1.0.1-beta (2012-09-21)
 Authors: Dan Gibbs <dan@goldcoastmedia.co.uk>
 
-Purge MODx pages from the Varnish cache when editing or updating a document.
+Purge documents and objects from the Varnish cache when editing or updating a document.
 
 Please configure your Varnish VCL to allow purge requests to be made
 from the server that your MODx installation resides on. See the documentation
