@@ -31,9 +31,9 @@
 $_lang['varnishpurge'] = 'Varnish Purge';
 
 // Errors
-$_lang['varnishpurge.purge_success'] = 'Successfully purged [[+url]]';
-$_lang['varnishpurge.purge_fail'] = 'Failed Varnish cache purge on [[+url]]. [[+code]] ([[+response]])';
-$_lang['varnishpurge.invalid_method'] = 'Invalid method \'[[+method]]\'. Please set
+$_lang['varnishpurge.purge_success'] = 'Varnish Purge: Purged [[+url]]';
+$_lang['varnishpurge.purge_fail'] = 'Varnish Purge: Failed purge on [[+url]]. [[+code]] ([[+response]])';
+$_lang['varnishpurge.invalid_method'] = 'Varnish Purge: Invalid method \'[[+method]]\'. Please set
 the method to \'curl\' or \'file_get_contents\' via the System Settings.';
 
 // Settings
